--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
   </head>
 
-  <body class="bg-black">
+  <body style="background-color: #171021">
     <header>
       <h3 class="text-center text-success w-75 mx-auto mt-4">
         Search Best Books for You !!
@@ -47,6 +47,13 @@
 
     <!-- Books Search Results -->
     <h6 id="search-warning" class="text-center text-warning mt-4"></h6>
+
+    <div
+      id="image"
+      class="position-fixed text-center top-50 start-50 translate-middle"
+    >
+      <img class="w-75 mt-5 pt-5" src="./images/cloud-books.png" alt="" />
+    </div>
 
     <main
       id="serch-result"
