Color Style Changed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body style="background-color: #171021">
     <header>
-      <h3 class="text-center text-success w-75 mx-auto mt-5">
+      <h3 style="color: #da405a" class="text-center w-75 mx-auto mt-5">
         Search Best Books for You !!
       </h3>
       <br />
@@ -33,7 +33,8 @@
         />
         <button
           onclick="searchBook()"
-          class="btn text-success fw-bold btn-outline-secondary"
+          style="color: #da405a"
+          class="btn fw-bold btn-outline-secondary"
           type="button"
           id="button-search"
         >
@@ -67,7 +68,8 @@
     >
       Copyright &#169; 2024 | All Rights Reserved by
       <a
-        class="text-decoration-none text-success fw-bold"
+        class="text-decoration-none fw-bold"
+        style="color: #da405a"
         target="_blank"
         href="https://www.linkedin.com/in/developer-jihad/"
         >Md Jihad Hossain</a
